# t1a_hackathon_team_test

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Justfile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: analyzer.py  database.py  logging_config.py  main.py  mock_data.py  models.py  prompts.py  seed.py
backend/tests/: conftest.py  test_analyzer_fallback.py  test_analyzer_fetch.py  test_analyzer_llm.py  test_analyzer_utils.py  test_chat.py  test_endpoints.py  test_mock_data.py  test_policy_text.py  test_reports.py  test_seed.py
frontend/: .dockerignore  .eslintrc.json  Dockerfile  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  vitest.config.js
frontend/src/app/: globals.css  layout.js  layout.jsx  page.js  page.jsx  page.test.jsx
frontend/src/app/app/: page.jsx
frontend/src/app/sudoku/: page.js
frontend/src/components/: AboutTab.jsx  AboutTab.test.jsx  AddService.js  AddService.jsx  AddService.test.jsx  CompareResults.jsx  CompareResults.test.jsx  CompareTab.jsx  CompareTab.test.jsx  CustomPolicyTab.jsx  CustomPolicyTab.test.jsx  ImportTab.jsx  PolicyChat.jsx  PolicyChat.test.jsx  PolicyViewer.jsx  PolicyViewer.test.jsx  RiskProfile.js  RiskProfile.jsx  RiskProfile.test.jsx  ServiceGrid.js  ServiceGrid.jsx  ServiceGrid.test.jsx  ServiceIcon.jsx  ServiceIcon.test.jsx  Sidebar.jsx  Sidebar.test.jsx  SudokuGame.js  SudokuNudge.jsx  SudokuNudge.test.jsx
frontend/src/components/pdf/: CombinedReport.jsx  PolicyReport.jsx  (+8 more)
(+14 files in other folders)
