[project]
name = "policylens-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "litellm>=1.35.0",
    "httpx==0.27.0",
    "beautifulsoup4==4.12.3",
    "sqlalchemy==2.0.30",
    "aiosqlite==0.20.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
