[project]
name = "privacylens-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "litellm>=1.82.0",
    "httpx==0.28.1",
    "beautifulsoup4==4.14.3",
    "sqlalchemy==2.0.48",
    "aiosqlite==0.22.1",
    "python-dotenv==1.2.2",
    "curl_cffi>=0.14,<1.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
